--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev -p 5075",
     "build": "next build",
-    "start": "next start",
+    "start": "next start -p 5075",
     "lint": "next lint"
   },
   "dependencies": {
@@ -13,16 +13,22 @@
     "@types/node": "18.15.11",
     "@types/react": "18.0.31",
     "@types/react-dom": "18.0.11",
+    "axios": "^1.3.5",
     "clsx": "^1.2.1",
     "eslint": "8.37.0",
     "eslint-config-next": "13.2.4",
     "lru-cache": "^8.0.5",
+    "md5": "^2.3.0",
     "next": "13.2.4",
+    "next-pwa": "^5.6.0",
+    "next-seo": "^6.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
+    "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
-    "swr": "^2.1.2",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "react-disqus-comments": "^1.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
