--- a/package.json
+++ b/package.json
@@ -21,16 +21,17 @@
     "md5": "^2.3.0",
     "next": "13.2.4",
     "next-pwa": "^5.6.0",
-    "next-seo": "^6.0.0",
     "react": "18.2.0",
+    "react-disqus-comments": "^1.4.0",
     "react-dom": "18.2.0",
+    "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.2",
     "swiper": "^9.2.0",
-    "typescript": "5.0.3",
-    "react-disqus-comments": "^1.4.0"
+    "typescript": "5.0.3"
   },
   "devDependencies": {
+    "@types/react-helmet": "^6.1.6",
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.21",
     "tailwindcss": "^3.3.1"
