--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-helmet": "^6.1.0",
     "react-query": "^3.39.3",
     "react-toastify": "^9.1.2",
+    "svg-captcha": "^1.4.0",
     "swiper": "^9.2.0",
     "typescript": "5.0.3"
   },
