--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-toastify": "^9.1.2",
     "svg-captcha": "^1.4.0",
     "swiper": "^9.2.0",
-    "typescript": "5.0.3"
+    "typescript": "5.0.3",
+    "xml": "^1.0.1"
   },
   "devDependencies": {
     "@types/react-helmet": "^6.1.6",
